HVAC Backup 2/objects/GRN__c(1).object
<CustomObject>
    <fields>
        <fullName>AM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GRNAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSL_Location_Address__c</fullName>
        <formula>Source_Location__r.Address__Street__s +&apos; &apos;+ Source_Location__r.Address__City__s + &apos; &apos;+Source_Location__r.Address__PostalCode__s +&apos; &apos;+ TEXT(Source_Location__r.Address__StateCode__s)</formula>
        <label>BSL Location Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CP_Address__c</fullName>
        <formula>Channel_Partner__r.Billing_Area__c+&apos; &apos;  + Channel_Partner__r.Billing_House_Flat_BlockNo__c+&apos; &apos; + Channel_Partner__r.BillingStreet+&apos; &apos; + Channel_Partner__r.BillingPostalCode+&apos; &apos; + Channel_Partner__r.BillingCity+&apos; &apos; + Channel_Partner__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Code__c</fullName>
        <formula>Channel_Partner__r.CP_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Channel Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GRN</relationshipLabel>
        <relationshipName>GRN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Courier_Name__c</fullName>
        <label>Courier Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Supply__c</fullName>
        <label>Date &amp; Time of Supply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Docket_Date__c</fullName>
        <label>Docket Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Docket_No__c</fullName>
        <label>Docket No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRN_Date_Time__c</fullName>
        <label>GRN Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GRN_Id__c</fullName>
        <label>GRN Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRN_Number_Custom__c</fullName>
        <formula>HYPERLINK(
&quot;/&quot; &amp;Id,
&apos;GRN&apos;+Name ,
&quot;_self&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GRN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRN_Product_Division__c</fullName>
        <label>GRN Product Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRN_Type__c</fullName>
        <label>GRN Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RMR</fullName>
                </value>
                <value>
                    <fullName>Sales Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_No_Challan_No__c</fullName>
        <label>Invoice No./Challan No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_File_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is File Upload?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Name_Address__c</fullName>
        <formula>Channel_Partner__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name &amp; Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>GRN</relationshipLabel>
        <relationshipName>GRN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Claim_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;Id,&apos;PCN-&apos;+
  Name  ,
&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Claim Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Request</label>
        <referenceTo>ProductRequest</referenceTo>
        <relationshipLabel>GRN (Part Request)</relationshipLabel>
        <relationshipName>GRN1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Request</label>
        <referenceTo>ProductRequest</referenceTo>
        <relationshipLabel>GRN</relationshipLabel>
        <relationshipName>GRN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Transfer</label>
        <referenceTo>ProductTransfer</referenceTo>
        <relationshipLabel>GRN</relationshipLabel>
        <relationshipName>GRN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Damaged Product</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Mismatch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_Requested__c</fullName>
        <formula>Product_Transfer__r.ProductRequestLineItem.QuantityRequested</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Sent__c</fullName>
        <label>Quantity Sent</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Received_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Received By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GRN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_DateTime__c</fullName>
        <label>Received DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Replaced_Product_Serial_Number__c</fullName>
        <label>Replaced Product Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Invoice_Date__c</fullName>
        <label>Return Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_OBD_No__c</fullName>
        <label>Return OBD No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_SO_No__c</fullName>
        <label>Return SO No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_GRN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse GRN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GRNSDE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>GRN (Source Location)</relationshipLabel>
        <relationshipName>GRN1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Generated</fullName>
                    <label>Generated (Approval Pending)</label>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Qty_Damaged__c</fullName>
        <label>Total Qty Damaged</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Qty_Mismatched__c</fullName>
        <label>Total Qty Mismatched</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Qty_Missing_Short__c</fullName>
        <label>Total Qty Missing/Short</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Qty_Received__c</fullName>
        <label>Total Qty Received</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Received__c</fullName>
        <label>Total Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transfer_Type__c</fullName>
        <label>Transfer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Inventory</fullName>
                </value>
                <value>
                    <fullName>Defective Inventory</fullName>
                </value>
                <value>
                    <fullName>Product Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehical_No__c</fullName>
        <label>Vehical No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>logged_in_user__c</fullName>
        <formula>IF( Channel_Partner__r.CP_User__c = $User.Id, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>logged in user</label>
        <type>Checkbox</type>
    </fields>
    <label>GRN</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Reverse_GRN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Defective_GRN</fullName>
        <columns>NAME</columns>
        <columns>GRN_Date_Time__c</columns>
        <columns>GRN_Type__c</columns>
        <columns>Part_Request__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Reverse_GRN__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Part Claim Tag</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_GRN</fullName>
        <columns>GRN_Number_Custom__c</columns>
        <columns>GRN_Type__c</columns>
        <columns>Product_Request__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My GRN</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>GRN Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>